Bug 41731 - Fix "in row" "Anything else" handling of end tags
Summary: Fix "in row" "Anything else" handling of end tags
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: 528+ (Nightly build)
Hardware: Other OS X 10.5
: P2 Normal
Assignee: Eric Seidel (no email)
URL:
Keywords:
Depends on:
Blocks: 41123
  Show dependency treegraph
 
Reported: 2010-07-06 20:37 PDT by Eric Seidel (no email)
Modified: 2010-07-06 20:48 PDT (History)
1 user (show)

See Also:


Attachments
Patch (2.01 KB, patch)
2010-07-06 20:40 PDT, Eric Seidel (no email)
no flags Details | Formatted Diff | Diff
Patch (2.86 KB, patch)
2010-07-06 20:42 PDT, Eric Seidel (no email)
abarth: review+
abarth: commit-queue+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Eric Seidel (no email) 2010-07-06 20:37:57 PDT
Fix "in row" "Anything else" handling of end tags
Comment 1 Eric Seidel (no email) 2010-07-06 20:40:54 PDT
Created attachment 60673 [details]
Patch
Comment 2 Adam Barth 2010-07-06 20:41:39 PDT
Comment on attachment 60673 [details]
Patch

I can haz results?
Comment 3 Eric Seidel (no email) 2010-07-06 20:42:28 PDT
Created attachment 60674 [details]
Patch
Comment 4 Adam Barth 2010-07-06 20:44:01 PDT
Comment on attachment 60674 [details]
Patch

Hilarious.
Comment 5 Eric Seidel (no email) 2010-07-06 20:48:41 PDT
Committed r62617: <http://trac.webkit.org/changeset/62617>