third_party/WebKit/WebCore/html/HTMLTreeBuilder.cpp
@@ -1520,11 +1520,7 @@ void HTMLTreeBuilder::processEndTagForInBody(AtomicHTMLToken& token)
     }
     if (token.name() == brTag) {
         parseError(token);
-        m_tree.reconstructTheActiveFormattingElements();
-        // Notice that we lose the attributes.
-        AtomicHTMLToken startBr(HTMLToken::StartTag, token.name());
-        m_tree.insertSelfClosingElement(startBr);
-        m_framesetOk = false;
+        processFakeStartTag(brTag);
         return;
     }
     processAnyOtherEndTagForInBody(token);
@@ -1715,7 +1711,7 @@ void HTMLTreeBuilder::processEndTag(AtomicHTMLToken& token)
             parseError(token);
             return;
         }
-        notImplemented();
+        processEndTagForInTable(token);
         break;
     case InCellMode:
         ASSERT(insertionMode() == InCellMode);
